Ensure cached items are not js files.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -72,7 +72,7 @@
 		.col-1-4-box {
 			width: 25%;
 			max-height: 188px;
-			overflow: scroll;
+			overflow: hidden;
 		}
 
 		.col-1-2-box {
@@ -252,7 +252,7 @@
 		}
 
 		.details {
-			overflow: scroll;
+			overflow: visible;
 		}
 	
 		td {
