Added devtools analytics.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -299,6 +299,7 @@
 		<script type="text/javascript" src="headers.js"></script>
 		<script type="text/javascript" src="display.js"></script>
 		<script type="text/javascript" src="devtoolscontent.js"></script>
+		<script type="text/javascript" src="googanalytics.js"></script>
 
 		<div class="container">
 			<div class="row clearfix">
