Add check to allow encoding quality to also be n/a for png or gif.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -97,6 +97,7 @@
 
 		 .transformedResults {
 		 	margin: 0px auto;
+		 	color: #656565;
 		 }
 
 		 .transformedResults th{
@@ -106,22 +107,21 @@
 
 		 .transformedResults td{
 		 	text-align: center;
-		 	color: #656565;
 		 }
 
 		 .transformedResults td.urlData {
 		 	text-align: left;
 		 }	
 
-		 .transformedResults td.increaseSize {
+		 .error {
 		 	color: red;
 		 }
 
-		 .transformedResults td.noChangeSize {
+		 .warning {
 		 	color: #FFDE00;	
 		 }
 
-		 .transformedResults td.decreaseSize {
+		 .success {
 		 	color: green;
 		 }
 
