Show kb mb and percent change for image.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -146,6 +146,7 @@
 		 .imageToggleBoxMessage {
 		 	margin-top:10px;
 		 	margin-bottom:20px;
+		 	color: #eee9e9;
 		 }
 
 		 .imageCompareViewer {
@@ -256,7 +257,9 @@
 		}
 	
 		td {
-			padding-bottom:2px
+			padding-bottom: 2px;
+			padding-left: 1px;
+			padding-right: 1px;
 		}
 
 		@media all and ( max-width: 1200px ) {
