Split out IM reporting from common reporting.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -6,9 +6,10 @@
 		<script type="text/javascript" src="page.js"></script>
 		<script type="text/javascript" src="imagetoggle.js"></script>
 		<script type="text/javascript" src="headers.js"></script>
-		<script type="text/javascript" src="display.js"></script>
-		<script type="text/javascript" src="devtoolscontent.js"></script>
+		<script type="text/javascript" src="display-im.js"></script>
+		<script type="text/javascript" src="display-common.js"></script>
 		<script type="text/javascript" src="googanalytics.js"></script>
+		<script type="text/javascript" src="report.js"></script>
 
 		<div class="container">
 			<div id="conversionSummary" class="row clearfix">
@@ -46,4 +47,5 @@
 			<div id="notEnabled" style="display:none" class="details col-full-box clearfix"></div>
 		</div>
 	</body>
+	<script type="text/javascript" src="devtoolscontent.js"></script>
 </html>
