Starting to use strict mode everywhere.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -5,7 +5,9 @@
 	<body>
 		<script type="text/javascript" src="page.js"></script>
 		<script type="text/javascript" src="imagetoggle.js"></script>
-		<script type="text/javascript" src="headers.js"></script>
+		<script type="text/javascript" src="parse-headers.js"></script>
+		<script type="text/javascript" src="headers-im.js"></script>
+		<script type="text/javascript" src="headers-ic.js"></script>
 		<script type="text/javascript" src="display-im.js"></script>
 		<script type="text/javascript" src="display-common.js"></script>
 		<script type="text/javascript" src="googanalytics.js"></script>
