Adding initial format compare.

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -29,9 +29,11 @@
 				<input type="radio" name="piezRadio" id="piezModeOff" value="piezModeOff">
 				<label for="piezModeOff">Disabled</label><br>
 				<input type="radio" name="piezRadio" id="piezModeSimple" value="piezModeSimple">
-				<label for="piezModeSimple">Enabled (Simple)</label><br>
+				<label for="piezModeSimple">Enabled (Normal)</label><br>
 				<input type="radio" name="piezRadio" id="piezModeAdvanced" value="piezModeAdvanced">
 				<label for="piezModeAdvanced">Enabled (Advanced)</label><br>
+				<input type="radio" name="piezRadio" id="piezModeBrowserFormatCompare" value="piezModeBrowserFormatCompare">
+				<label for="piezModeBrowserFormatCompare">Enabled - Image Manager Browser Format Compare</label><br>
 			</form>
 		</div>
 	</body>
