--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -14,11 +14,17 @@
 		<script type="text/javascript" src="report.js"></script>
 
 		<div class="container">
-			<div id="conversionSummary" class="row clearfix">
+			<div style="display:none" id="conversionSummary" class="row clearfix">
 				<div class="col-1-4-box"><h1>Realtime Conversions</h1><h3 id="totalICImagesTransformed">0</h3></div>
 				<div class="col-1-4-box"><h1>Optimized Conversions</h1><h3 id="totalIMImagesTransformed">0</h3></div>
 				<div class="col-1-4-box"><h1>Total Saved Bytes</h1><h3 id="totalByteReduction">0</h3></div>
 				<div class="col-1-4-box"><h1>% Bytes Change</h1><h3 id="pctByteReduction">0</h3></div>
+			</div>
+			<div style="display:none" id="browserFormatCompareSummary" class="row clearfix">
+				<div class="col-1-4-box"><h1>Generic</h1><h3 id="generic">0</h3></div>
+				<div class="col-1-4-box"><h1>Chrome</h1><h3 id="chrome">0</h3></div>
+				<div class="col-1-4-box"><h1>Safari</h1><h3 id="safari">0</h3></div>
+				<div class="col-1-4-box"><h1>IE</h1><h3 id="ie">0</h3></div>
 			</div>
 			<div class="clearfix">
 				<div style="display:none" id="imageBox" class="col-image-box">
