Disable new browser format compare until fix mixed content mode.

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -32,8 +32,8 @@
 				<label for="piezModeSimple">Enabled (Normal)</label><br>
 				<input type="radio" name="piezRadio" id="piezModeAdvanced" value="piezModeAdvanced">
 				<label for="piezModeAdvanced">Enabled (Advanced)</label><br>
-				<input type="radio" name="piezRadio" id="piezModeBrowserFormatCompare" value="piezModeBrowserFormatCompare">
-				<label for="piezModeBrowserFormatCompare">Enabled - Image Manager Browser Format Compare</label><br>
+				<!-- <input type="radio" name="piezRadio" id="piezModeBrowserFormatCompare" value="piezModeBrowserFormatCompare">
+				<label for="piezModeBrowserFormatCompare">Enabled - Image Manager Browser Format Compare</label><br> -->
 			</form>
 		</div>
 	</body>
