--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -19,7 +19,7 @@
 				box-shadow: inset 1px 1px 3px rgba(1,1,1,1);
 				overflow: hidden;
 			}
-		</style>	
+		</style>
 	</head>
 	<body>
 		<h1>Piez Configuration</h1>
@@ -29,11 +29,13 @@
 				<input type="radio" name="piezRadio" id="piezModeOff" value="piezModeOff">
 				<label for="piezModeOff">Disabled</label><br>
 				<input type="radio" name="piezRadio" id="piezModeSimple" value="piezModeSimple">
-				<label for="piezModeSimple">Enabled (Normal)</label><br>
+				<label for="piezModeSimple">Image Manager (Simple)</label><br>
 				<input type="radio" name="piezRadio" id="piezModeAdvanced" value="piezModeAdvanced">
-				<label for="piezModeAdvanced">Enabled (Advanced)</label><br>
-				<!-- <input type="radio" name="piezRadio" id="piezModeBrowserFormatCompare" value="piezModeBrowserFormatCompare">
-				<label for="piezModeBrowserFormatCompare">Enabled - Image Manager Browser Format Compare</label><br> -->
+				<label for="piezModeAdvanced">Image Manager (Advanced)</label><br>
+                <!-- <input type="radio" name="piezRadio" id="piezModeBrowserFormatCompare" value="piezModeBrowserFormatCompare">
+				<label for="piezModeBrowserFormatCompare">Image Manager Browser Format Compare</label><br> -->
+				<input type="radio" name="piezRadio" id="piezModeCPI" value="piezModeCPI">
+				<label for="piezModeCPI">Cloud Performance Intelligence</label><br>
 			</form>
 		</div>
 	</body>
