Code refactoring and cleanup
Added missing semicolons.
Changed summary bar at top to have generic classes each mode can reference and change text
Choosing correct mode to display happens earlier than Piez panel 'onload' event

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -17,16 +17,10 @@
 
 		<div class="container">
 			<div id="conversionSummary" class="row clearfix">
-                <div class="col-1-4-box" id="totalICImagesTransformed"><h1>Realtime Conversions</h1><h3>&nbsp;</h3></div>
-				<div class="col-1-4-box" id="totalIMImagesTransformed"><h1>Optimized Conversions</h1><h3>&nbsp;</h3></div>
-				<div class="col-1-4-box" id="totalByteReduction"><h1>Total Saved Bytes</h1><h3>&nbsp;</h3></div>
-				<div class="col-1-4-box" id="pctByteReduction"><h1>% Bytes Change</h1><h3>&nbsp;</h3></div>
-			</div>
-			<div style="display:none" id="browserFormatCompareSummary" class="row clearfix">
-				<div class="col-1-4-box"><h1>Generic</h1><h3 id="generic">0</h3></div>
-				<div class="col-1-4-box"><h1>Chrome</h1><h3 id="chrome">0</h3></div>
-				<div class="col-1-4-box"><h1>Safari</h1><h3 id="safari">0</h3></div>
-				<div class="col-1-4-box"><h1>IE</h1><h3 id="ie">0</h3></div>
+                <div class="col-1-4-box col1"><h1>Realtime Conversions</h1><h3>&nbsp;</h3></div>
+				<div class="col-1-4-box col2"><h1>Optimized Conversions</h1><h3>&nbsp;</h3></div>
+				<div class="col-1-4-box col3"><h1>Total Saved Bytes</h1><h3>&nbsp;</h3></div>
+				<div class="col-1-4-box col4"><h1>% Bytes Change</h1><h3>&nbsp;</h3></div>
 			</div>
 			<div class="clearfix">
 				<div style="display:none" id="imageBox" class="col-image-box">
