added IM identifier to piez IM modes
e.g. piezModeSimple -> piezModeImSimple
also changed last instance of chrome.extension to chrome.runtime

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -28,10 +28,10 @@
 			<form id='piezConfigForm' class=''>
 				<input type="radio" name="piezRadio" id="piezModeOff" value="piezModeOff">
 				<label for="piezModeOff">Disabled</label><br>
-				<input type="radio" name="piezRadio" id="piezModeSimple" value="piezModeSimple">
-				<label for="piezModeSimple">Image Manager (Simple)</label><br>
-				<input type="radio" name="piezRadio" id="piezModeAdvanced" value="piezModeAdvanced">
-				<label for="piezModeAdvanced">Image Manager (Advanced)</label><br>
+				<input type="radio" name="piezRadio" id="piezModeImSimple" value="piezModeImSimple">
+				<label for="piezModeImSimple">Image Manager (Simple)</label><br>
+				<input type="radio" name="piezRadio" id="piezModeImAdvanced" value="piezModeImAdvanced">
+				<label for="piezModeImAdvanced">Image Manager (Advanced)</label><br>
                 <!-- <input type="radio" name="piezRadio" id="piezModeBrowserFormatCompare" value="piezModeBrowserFormatCompare">
 				<label for="piezModeBrowserFormatCompare">Image Manager Browser Format Compare</label><br> -->
 				<input type="radio" name="piezRadio" id="piezModeCPI" value="piezModeCPI">
