Renamed realtime and offline conversions.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -17,8 +17,8 @@
 
 		<div class="container">
 			<div id="conversionSummary" class="row clearfix">
-                <div class="col-1-4-box"><h1 id="col-1-title">Realtime Conversions</h1><h3 id="col-1-info">&nbsp;</h3></div>
-				<div class="col-1-4-box"><h1 id="col-2-title">Optimized Conversions</h1><h3 id="col-2-info">&nbsp;</h3></div>
+                <div class="col-1-4-box"><h1 id="col-1-title">Optimized Realtime</h1><h3 id="col-1-info">&nbsp;</h3></div>
+				<div class="col-1-4-box"><h1 id="col-2-title">Optimized Offline</h1><h3 id="col-2-info">&nbsp;</h3></div>
 				<div class="col-1-4-box"><h1 id="col-3-title">Total Saved Bytes</h1><h3 id="col-3-info">&nbsp;</h3></div>
 				<div class="col-1-4-box"><h1 id="col-4-title">% Bytes Change</h1><h3 id="col-4-info">&nbsp;</h3></div>
 			</div>
@@ -42,10 +42,10 @@
 			</div>
 			<div id="conversionDetails">
 				<div id="detailsBox1" style="display:none" class="row details clearfix">
-					<div class="col-full-box"><h1 id="detailsBox1Title">Optimized Conversion Details</h1><h3 id="detailsBox1Table"></h3></div>
+					<div class="col-full-box"><h1 id="detailsBox1Title">Optimized Offline Details</h1><h3 id="detailsBox1Table"></h3></div>
 				</div>
 				<div id="detailsBox2" style="display:none" class="row details clearfix">
-					<div class="col-full-box"><h1 id="detailsBox2Title">Realtime Conversion Details</h1><h3 id="detailsBox2Table"></h3></div>
+					<div class="col-full-box"><h1 id="detailsBox2Title">Optimized Realtime Details</h1><h3 id="detailsBox2Table"></h3></div>
 				</div>
 			</div>
 			<div id="notEnabled" style="display:none" class="details col-full-box clearfix"></div>
