--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -8,6 +8,7 @@
 		<script type="text/javascript" src="parse-headers.js"></script>
 		<script type="text/javascript" src="headers-im.js"></script>
 		<script type="text/javascript" src="headers-ic.js"></script>
+		<script type="text/javascript" src="headers-non-im-ic.js"></script>
         <script type="text/javascript" src="headers-cpi.js"></script>
 		<script type="text/javascript" src="display-im.js"></script>
         <script type="text/javascript" src="display-cpi.js"></script>
@@ -46,6 +47,9 @@
 				</div>
 				<div id="detailsBox2" style="display:none" class="row details clearfix">
 					<div class="col-full-box"><h1 id="detailsBox2Title">Optimized Realtime Details</h1><h3 id="detailsBox2Table"></h3></div>
+				</div>
+				<div id="detailsBox3" style="display:none" class="row details clearfix">
+					<div class="col-full-box"><h1 id="detailsBox3Title">Non Image Manager Images</h1><span id="nonImIcBytes">&nbsp;</span><h3 id="detailsBox3Table"></h3></div>
 				</div>
 			</div>
 			<div id="notEnabled" style="display:none" class="details col-full-box clearfix"></div>
