Rebranded CPI to A2.

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -34,8 +34,8 @@
 				<label for="piezModeImAdvanced">Image Manager (Advanced)</label><br>
                 <!-- <input type="radio" name="piezRadio" id="piezModeBrowserFormatCompare" value="piezModeBrowserFormatCompare">
 				<label for="piezModeBrowserFormatCompare">Image Manager Browser Format Compare</label><br> -->
-				<input type="radio" name="piezRadio" id="piezModeCPI" value="piezModeCPI">
-				<label for="piezModeCPI">Cloud Performance Intelligence</label><br>
+				<input type="radio" name="piezRadio" id="piezModeA2" value="piezModeA2">
+				<label for="piezModeA2">Adaptive Acceleration</label><br>
 			</form>
 		</div>
 	</body>
