--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -9,9 +9,9 @@
 		<script type="text/javascript" src="headers-im.js"></script>
 		<script type="text/javascript" src="headers-ic.js"></script>
 		<script type="text/javascript" src="headers-non-im-ic.js"></script>
-        <script type="text/javascript" src="headers-cpi.js"></script>
+        <script type="text/javascript" src="headers-a2.js"></script>
 		<script type="text/javascript" src="display-im.js"></script>
-        <script type="text/javascript" src="display-cpi.js"></script>
+        <script type="text/javascript" src="display-a2.js"></script>
 		<script type="text/javascript" src="display-common.js"></script>
 		<script type="text/javascript" src="googanalytics.js"></script>
 		<script type="text/javascript" src="report.js"></script>
