Added nicer ajax spinner for A2 page load.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -33,7 +33,7 @@
 							<th id="originalImage" class="unselectedImage">Original Image</th>
 						</tr>
 					</table>
-					<div id="ajaxloader" style="display:none;"></div>
+					<div id="ImageAjaxloader" class="ajaxLoader" style="display:none;"></div>
 					<div id='imageToggleBox' class="imageToggleBox">
 						<img id="toggleOriginalImage" class="toggleOriginalImage">
 						<img id="toggleTransformedImage" class="toggleTransformedImage">
@@ -41,6 +41,7 @@
 					<p id='imageToggleBoxMessage' class='imageToggleBoxMessage'>Click The Image To Toggle</p>
 				</div>
 			</div>
+			<div id="conversionDetailsAjaxLoader" class="ajaxLoader" style="display:none;"></div>
 			<div id="conversionDetails">
 				<div id="detailsBox1" style="display:none" class="row details clearfix">
 					<div class="col-full-box"><h1 id="detailsBox1Title">Optimized Offline Details</h1><h3 id="detailsBox1Table"></h3></div>
