Center non akamai results sub heading.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -50,7 +50,7 @@
 					<div class="col-full-box"><h1 id="detailsBox2Title">Optimized Realtime Details</h1><h3 id="detailsBox2Table"></h3></div>
 				</div>
 				<div id="detailsBox3" style="display:none" class="row details clearfix">
-					<div class="col-full-box"><h1 id="detailsBox3Title">Non Image Manager Images</h1><span id="nonImIcBytes">&nbsp;</span><h3 id="detailsBox3Table"></h3></div>
+					<div class="col-full-box"><h1 id="detailsBox3Title">Non Image Manager Images</h1><div id="nonImIcBytes" class="subHeaderInfo">&nbsp;</div><h3 id="detailsBox3Table"></h3></div>
 				</div>
 			</div>
 			<div id="notEnabled" style="display:none" class="details col-full-box clearfix"></div>
