--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -36,6 +36,10 @@
 				<label for="piezModeBrowserFormatCompare">Image Manager Browser Format Compare</label><br> -->
 				<input type="radio" name="piezRadio" id="piezModeA2" value="piezModeA2">
 				<label for="piezModeA2">Adaptive Acceleration</label><br>
+				<input type="radio" name="piezRadio" id="piezModeRoSimple" value="piezModeRoSimple">
+				<label for="piezModeRoSimple">Resource Optimizer (Simple)</label><br>
+				<input type="radio" name="piezRadio" id="piezModeRoAdvanced" value="piezModeRoAdvanced">
+				<label for="piezModeRoAdvanced">Resource Optimizer (Advanced)</label><br>
 			</form>
 		</div>
 	</body>
