--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -7,10 +7,13 @@
 		<script type="text/javascript" src="imagetoggle.js"></script>
 		<script type="text/javascript" src="parse-headers.js"></script>
 		<script type="text/javascript" src="headers-im.js"></script>
+		<script type="text/javascript" src="headers-ro.js"></script>
 		<script type="text/javascript" src="headers-ic.js"></script>
 		<script type="text/javascript" src="headers-non-im-ic.js"></script>
+		<script type="text/javascript" src="headers-non-ro.js"></script>
         <script type="text/javascript" src="headers-a2.js"></script>
 		<script type="text/javascript" src="display-im.js"></script>
+		<script type="text/javascript" src="display-ro.js"></script>
         <script type="text/javascript" src="display-a2.js"></script>
 		<script type="text/javascript" src="display-common.js"></script>
 		<script type="text/javascript" src="googanalytics.js"></script>
