Add in progress resourse checks for resource optimizer.

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -7,7 +7,8 @@
 		<script type="text/javascript" src="imagetoggle.js"></script>
 		<script type="text/javascript" src="parse-headers.js"></script>
 		<script type="text/javascript" src="headers-im.js"></script>
-		<script type="text/javascript" src="headers-ro.js"></script>
+		<script type="text/javascript" src="headers-ro-offline.js"></script>
+		<script type="text/javascript" src="headers-ro-in-progress.js"></script>
 		<script type="text/javascript" src="headers-ic.js"></script>
 		<script type="text/javascript" src="headers-non-im-ic.js"></script>
 		<script type="text/javascript" src="headers-non-ro.js"></script>
