--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -5,14 +5,10 @@
 	<body>
 		<script type="text/javascript" src="page.js"></script>
 		<script type="text/javascript" src="imagetoggle.js"></script>
+		<script type="text/javascript" src="header-parser-ro.js"></script>
+		<script type="text/javascript" src="header-parser-a2.js"></script>
+		<script type="text/javascript" src="header-parser-im.js"></script>
 		<script type="text/javascript" src="parse-headers.js"></script>
-		<script type="text/javascript" src="headers-im.js"></script>
-		<script type="text/javascript" src="headers-ro-offline.js"></script>
-		<script type="text/javascript" src="headers-ro-in-progress.js"></script>
-		<script type="text/javascript" src="headers-ic.js"></script>
-		<script type="text/javascript" src="headers-non-im-ic.js"></script>
-		<script type="text/javascript" src="headers-non-ro.js"></script>
-        <script type="text/javascript" src="headers-a2.js"></script>
 		<script type="text/javascript" src="display-im.js"></script>
 		<script type="text/javascript" src="display-ro.js"></script>
         <script type="text/javascript" src="display-a2.js"></script>
