--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -26,18 +26,18 @@
 		<script src="popup.js"></script>
 		<div class='main'>
 			<form id='piezConfigForm' class=''>
-				<input type="radio" name="piezRadio" id="piezModeOff" value="piezModeOff">
-				<label for="piezModeOff">Disabled</label><br>
-				<input type="radio" name="piezRadio" id="piezModeImSimple" value="piezModeImSimple">
+				<input type="radio" name="piezRadio" id="piez-off" value="piez-off">
+				<label for="piez-off">Disabled</label><br>
+				<input type="radio" name="piezRadio" id="piez-im-simple" value="piez-im-simple">
 				<label for="piezModeImSimple">Image Manager (Simple)</label><br>
-				<input type="radio" name="piezRadio" id="piezModeImAdvanced" value="piezModeImAdvanced">
+				<input type="radio" name="piezRadio" id="piez-im-advanced" value="piez-im-advanced">
 				<label for="piezModeImAdvanced">Image Manager (Advanced)</label><br>
-				<input type="radio" name="piezRadio" id="piezModeA2" value="piezModeA2">
-				<label for="piezModeA2">Adaptive Acceleration</label><br>
-				<input type="radio" name="piezRadio" id="piezModeRoSimple" value="piezModeRoSimple">
-				<label for="piezModeRoSimple">Resource Optimizer (Simple)</label><br>
-				<input type="radio" name="piezRadio" id="piezModeRoAdvanced" value="piezModeRoAdvanced">
-				<label for="piezModeRoAdvanced">Resource Optimizer (Advanced)</label><br>
+				<input type="radio" name="piezRadio" id="piez-a2" value="piez-a2">
+				<label for="piez-a2">Adaptive Acceleration</label><br>
+				<input type="radio" name="piezRadio" id="piez-ro-simple" value="piez-ro-simple">
+				<label for="piez-ro-simple">Resource Optimizer (Simple)</label><br>
+				<input type="radio" name="piezRadio" id="piez-ro-advanced" value="piez-ro-advanced">
+				<label for="piez-ro-advanced">Resource Optimizer (Advanced)</label><br>
 			</form>
 		</div>
 	</body>
