Fix init piez when local storage contains an unknown piez state.

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -29,9 +29,9 @@
 				<input type="radio" name="piezRadio" id="piez-off" value="piez-off">
 				<label for="piez-off">Disabled</label><br>
 				<input type="radio" name="piezRadio" id="piez-im-simple" value="piez-im-simple">
-				<label for="piezModeImSimple">Image Manager (Simple)</label><br>
+				<label for="piez-im-simple">Image Manager (Simple)</label><br>
 				<input type="radio" name="piezRadio" id="piez-im-advanced" value="piez-im-advanced">
-				<label for="piezModeImAdvanced">Image Manager (Advanced)</label><br>
+				<label for="piez-im-advanced">Image Manager (Advanced)</label><br>
 				<input type="radio" name="piezRadio" id="piez-a2" value="piez-a2">
 				<label for="piez-a2">Adaptive Acceleration</label><br>
 				<input type="radio" name="piezRadio" id="piez-ro-simple" value="piez-ro-simple">
