Add script manager support.

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -33,11 +33,13 @@
 				<input type="radio" name="piezRadio" id="piez-im-advanced" value="piez-im-advanced">
 				<label for="piez-im-advanced">Image Manager (Advanced)</label><br>
 				<input type="radio" name="piezRadio" id="piez-a2" value="piez-a2">
-				<label for="piez-a2">Adaptive Acceleration</label><br>
+				<label for="piez-a2">Push/Preconnect</label><br>
 				<input type="radio" name="piezRadio" id="piez-ro-simple" value="piez-ro-simple">
 				<label for="piez-ro-simple">Resource Optimizer (Simple)</label><br>
 				<input type="radio" name="piezRadio" id="piez-ro-advanced" value="piez-ro-advanced">
 				<label for="piez-ro-advanced">Resource Optimizer (Advanced)</label><br>
+				<input type="radio" name="piezRadio" id="piez-3pm" value="piez-3pm">
+				<label for="piez-3pm">Script Management</label><br>
 			</form>
 		</div>
 	</body>
