--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -8,10 +8,12 @@
 		<script type="text/javascript" src="header-parser-ro.js"></script>
 		<script type="text/javascript" src="header-parser-a2.js"></script>
 		<script type="text/javascript" src="header-parser-im.js"></script>
+		<script type="text/javascript" src="header-parser-3pm.js"></script>
 		<script type="text/javascript" src="parse-headers.js"></script>
 		<script type="text/javascript" src="display-im.js"></script>
 		<script type="text/javascript" src="display-ro.js"></script>
         <script type="text/javascript" src="display-a2.js"></script>
+        <script type="text/javascript" src="display-3pm.js"></script>
 		<script type="text/javascript" src="display-common.js"></script>
 		<script type="text/javascript" src="googanalytics.js"></script>
 		<script type="text/javascript" src="report.js"></script>
