Adding in font preloads

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -33,7 +33,7 @@
 				<input type="radio" name="piezRadio" id="piez-im-advanced" value="piez-im-advanced">
 				<label for="piez-im-advanced">Image Manager (Advanced)</label><br>
 				<input type="radio" name="piezRadio" id="piez-a2" value="piez-a2">
-				<label for="piez-a2">Push/Preconnect</label><br>
+				<label for="piez-a2">Push/Preconnect/Preload</label><br>
 				<input type="radio" name="piezRadio" id="piez-ro-simple" value="piez-ro-simple">
 				<label for="piez-ro-simple">Resource Optimizer (Simple)</label><br>
 				<input type="radio" name="piezRadio" id="piez-ro-advanced" value="piez-ro-advanced">
