--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -64,24 +64,24 @@
         <div id="conversionDetails">
             <div id="detailsBox1" style="display:none" class="row details clearfix">
                 <div class="col-full-box">
-                    <h1 id="detailsBox1Title">Optimized Data Details</h1>
+                    <h1 class="table-title" id="detailsBox1Title">Optimized Data Details</h1>
                     <div id="table-wrapper2">
-                        <h3 class="" id="detailsBox1TaxbleVideo"></h3>
+                        <div class="detailsTable" id="detailsBox1TableVideo"></div>
                     </div>
                     <div id="table-wrapper1">
-                        <h3 class="detailsTable" id="detailsBox1Table"></h3>
+                        <div class="detailsTable" id="detailsBox1Table"></div>
                     </div>
                 </div>
             </div>
             <div id="detailsBox2" style="display:none" class="row details clearfix">
                 <div class="col-full-box">
-                    <h1 id="detailsBox2Title">Optimized Realtime Details</h1>
+                    <h1 class="table-title" id="detailsBox2Title">Optimized Realtime Details</h1>
                     <h3 id="detailsBox2Table"></h3>
                 </div>
             </div>
             <div id="detailsBox3" style="display:none" class="row details clearfix">
                 <div class="col-full-box">
-                    <h1 id="detailsBox3Title">Non Image Manager</h1>
+                    <h1 class="table-title" id="detailsBox3Title">Non Image Manager</h1>
                     <div id="nonImIcBytes" class="subHeaderInfo">&nbsp;</div>
                     <h3 id="detailsBox3Table"></h3>
                 </div>
