--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -11,7 +11,7 @@
 
 			div.main {
 				border-radius: 5px;
-				background: #2e2f30;
+				background: #2F2F2F;
 				font-size: 15px;
 				font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 				padding: 20px;
