--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -66,7 +66,7 @@
                 <div class="col-full-box">
                     <h3 class="table-title" id="detailsBox1Title">Video Optimization Details</h3>
                     <div id="table-wrapper1">
-                        <div class="detailsTable" id="detailsBox1TableVideo"></div>
+                        <div class="detailsTable" id="detailsBox1Table"></div>
                     </div>
                 </div>
             </div>
@@ -81,13 +81,13 @@
             <div id="detailsBox3" style="display:none" class="row details clearfix">
                 <div class="col-full-box">
                     <h3 class="table-title" id="detailsBox3Title">Optimized Realtime Details</h3>
+                    <div id="nonImIcBytes" class="subHeaderInfo">&nbsp;</div>
                     <h3 id="detailsBox3Table"></h3>
                 </div>
             </div>
             <div id="detailsBox4" style="display:none" class="row details clearfix">
                 <div class="col-full-box">
                     <h3 class="table-title" id="detailsBox4Title">Non Image Manager</h3>
-                    <div id="nonImIcBytes" class="subHeaderInfo">&nbsp;</div>
                     <h3 id="detailsBox4Table"></h3>
                 </div>
             </div>
