Basic image and video comparison style cleanup

--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -25,8 +25,8 @@
         </div>
         <div class="clearfix">
             <div style="display:none" id="imageBox" class="col-image-box">
-                <button id="close">close(x)</button>
-                <h1 id = "compareTitle"></h1>
+                <div id="close">&#215;</div>
+                <div id="compareTitle" class="img-align"></div>
                 <a id="compareUrlTitle" target="_blank"></a>
                 <!-- Image -->
                 <div id="imageCompare">
