Clean up css for error messages and configuration menu

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -2,20 +2,20 @@
 	<head>
 		<style>
 			body {
-			  margin: 10;
-			  background-color: #222222;
+			  padding: 15px;
+			  background-color: #2F2F2F;
 			  font-size: 14px;
-			  color: #999797;
-			  font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+			  color: #FFFFFF;
+			  font-family: 'Inter', 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
 			}
 
 			div.main {
 				border-radius: 5px;
-				background: #2F2F2F;
+				background: #3D3D3D;
 				font-size: 15px;
-				font-family: 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
-				padding: 20px;
-				width: 500px;
+				font-family: 'Inter', 'Open Sans', "Helvetica Neue", Helvetica, Arial, sans-serif;
+				padding: 20px 20px 5px 20px;
+				width:300px;
 				box-shadow: inset 1px 1px 3px rgba(1,1,1,1);
 				overflow: hidden;
 			}
