--- a/devtools/devtoolscontent.html
+++ b/devtools/devtoolscontent.html
@@ -6,8 +6,6 @@
 
 <body>
     <script type="text/javascript" src="page.js"></script>
-    <script type="text/javascript" src="imagetoggle.js"></script>
-    <script type="text/javascript" src="videotoggle.js"></script>
     <script type="text/javascript" src="header-parser-ro.js"></script>
     <script type="text/javascript" src="header-parser-a2.js"></script>
     <script type="text/javascript" src="header-parser-im.js"></script>
@@ -28,36 +26,43 @@
                 <div style="display:none" id="imageBox" class="col-image-box">
                     <div id="close">&#215;</div>
                     <div id="compareTitle" class="img-align"></div>
-                    <a id="compareUrlTitle" target="_blank"></a>
                     <!-- Image -->
                     <div id="imageCompare">
-                        <table id='imageToggleControls' class='imageCompareTable'>
-                            <tr>
-                                <th id="transformedImage" class="unselectedImage">Transformed Image</th>
-                                <th id="originalImage" class="unselectedImage">Original Image</th>
-                            </tr>
-                        </table>
-                        <div id="ImageAjaxloader" class="ajaxLoader" style="display:none;"></div>
-                        <div id='imageToggleBox' class="imageToggleBox">
-                            <img id="toggleOriginalImage" class="toggleOriginalImage">
-                            <img id="toggleTransformedImage" class="toggleTransformedImage">
+                        <div id='imageCompareBox' class="compareBox">
+                            <div id="imageCompareOrig" class="compareOrig">
+                                <div id="imageAjaxLoader1" class="ajaxLoader" style="display:none;"></div>
+                                <img id="originalImage" class="originalImage">
+                                <p id="originalImageText">Original</p>
+                                <div id="originalImageValues"></div>
+                            </div>
+                            <div id="imageCompareTran" class="compareTran">
+                                <div id="imageAjaxLoader2" class="ajaxLoader" style="display:none;"></div>
+                                <img id="transformedImage" class="transformedImage">
+                                <p id="transformedImageText">Transformed</p>
+                                <div id="transformedImageValues"></div>
+                            </div>
                         </div>
-                        <p id='toggleBoxMessage' class='toggleBoxMessage'></p>
                     </div>
                     <!-- Video -->
                     <div id="videoCompare">
-                        <table id='imageToggleControls' class='imageCompareTable'>
-                            <tr>
-                                <th id="transformedVideo" class="unselectedImage">Transformed Video</th>
-                                <th id="originalVideo" class="unselectedImage">Original Video</th>
-                            </tr>
-                        </table>
-                        <div id="videoToggleControls">
-                            <button id="videoToggleButton" type="button">Toggle Video</button>
+                        <div id="videoCompareBox" class="compareBox">
+                            <div id="videoCompareOrig" class="compareOrig">
+                                <div id="videoAjaxLoader1" class="ajaxLoader" style="display:none;"></div>
+                                <video id="originalVideo" loop></video>
+                                <p id="originalVideoText">Original</p>
+                                <div id="originalVideoValues"></div>
+                            </div>
+                            <div id="videoCompareTran" class="compareTran">
+                                <div id="videoAjaxLoader2" class="ajaxLoader" style="display:none;"></div>
+                                <video id="transformedVideo" loop></video>
+                                <p id="transformedVideoText">Transformed</p>
+                                <div id="transformedVideoValues"></div>
+                            </div>
                         </div>
-                        <div id="videoToggleBox">
-                            <video id="videoToggle" controls autoplay loop></video>
-                        </div>
+                    </div>
+                    <div id="compareUrl">
+                        <p id="compareUrlTitle"></p>
+                        <a id="compareUrlLink" target="_blank"></a>
                     </div>
                 </div>
             </div>
