--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -46,7 +46,7 @@
 				<br>
 				<h2>Options</h2>
 				<input type="checkbox" name="piezCheckbox" class="piez-options" id="save-data" value="save-data">
-				<label for="save-data">Save data</label><br>
+				<label for="save-data">Save-Data</label><br>
 				<input type="checkbox" name="piezCheckbox" class="piez-options" id="present-mode" value="present-mode">
 				<label for="present-mode">Present mode</label>
 			</form>
