Specify presentation mode is only for IM

--- a/browseraction/popup.html
+++ b/browseraction/popup.html
@@ -48,7 +48,7 @@
 				<input type="checkbox" name="piezCheckbox" class="piez-options" id="save-data" value="save-data">
 				<label for="save-data">Save-Data</label><br>
 				<input type="checkbox" name="piezCheckbox" class="piez-options" id="present-mode" value="present-mode">
-				<label for="present-mode">Present mode</label>
+				<label for="present-mode">Present mode (Image Manager)</label>
 			</form>
 		</div>
 	</body>
